TransforMiiX (TM) 
(C) Copyright 1999, 2000, The MITRE Corporation, Keith Visco, et al. All rights reserved.

Build 20000412

-- Fixed the following Axes names in Names.cpp so that
   the are compatible with the XSLT 1.0 recommendation (Marina)
   -- FOLLOWING_SIBLING_AXIS - removed the trailing s
   -- PRECEDING_SIBLING_AXIS - removed the trailing s

-- Added support for xsl:sort (kvisco)
   -- simple sorting is working...documentation to follow
-- Added StringComparator and DefaultStringComparator
   -- we need some more comparators for I18N support
-- Did some directory structure changes
   - source/xsl is now source/xslt
   - source/xsl/expr is now source/xpath
-- Changed xslt/XSLProcessor.* to XSLTProcessor.*

-- Incorporated some changes from Olivier Gerardin for the Expat parser

Build 20000331

-- Fixed a memory leak with translate() function (kvisco)
   -- StringFunctionCall.cpp
-- Updated the necessary source files to support the changes to
   the String class (kvisco)
-- Overloaded String::toCharArray to automatically create the
   character array (tomk)
-- Changed String::toChar to String::toCharArray (tomk)


Build 20000327
-- Fixed "dot" bug in CNAME parsing (ExprLexer.cpp) reported by Nathan Pride

Build 20000326
-- Added Peter Van der Beken's changes to net/URIUtils for integration
   within Mozilla

-- Added Marina Mechtcheriakova's changes to xml/parser/XMLParser.cpp to fix
   a Unicode bug in ::startElement. Instead of improperly casting char* 
   as DOM_CHAR*, the proper String constructor, String(char*) is used

Build 20000322
-- Added Unicode bug fix from Lidong

Build 20000318
-- Added Olivier's implementation of the XPath Number functions
-- Added missing prototype to TxString.h (Peter Van der Beken)

Build 20000222
-- Added Attribute parent mapping since DOM 1.0 doesn't support it
-- Added default sorting of NodeSet by DocumentOrder
   -- yes this is a hint that xsl:sort is will be available soon

Build 20000218